debugg for dependencies